apis-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apis-vs
spec:
  hosts:
    - api.equidis.tk
    - grpc.equidis.tk
  gateways:
    - http-gateway
    - grpc-gateway
  http:
    - name: users
      match:
        - uri:
            prefix: "/users"
      route:
        - destination:
            host: users.micronaut.svc.cluster.local
            port:
              number: 50051
    - name: availability
      match:
        - uri:
            prefix: "/availabilities"
      route:
        - destination:
            host: availability.micronaut.svc.cluster.local
            port:
              number: 50051
