management-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: management-vs
spec:
  hosts:
    - grafana.equidis.tk
    - prometheus.equidis.tk
    - kiali.equidis.tk
    - tracing.equidis.tk
  gateways:
    - management-gateway
  http:
    - match:
        - headers:
            host:
              exact: grafana.equidis.tk
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000
    - match:
        - headers:
            host:
              exact: prometheus.equidis.tk
      route:
        - destination:
            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 9090
    - match:
        - headers:
            host:
              exact: kiali.equidis.tk
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
    - match:
        - headers:
            host:
              exact: tracing.equidis.tk
      route:
        - destination:
            host: tracing.istio-system.svc.cluster.local
            port:
              number: 80
